<resources>
    <string name="app_name">SQL_LiteExample</string>
    <string name="hint_cell">Please enter Cell Number</string>
    <string name="hint_name">Please enter the Name</string>
    <string name="btn_submit">Please Submit the Data</string>
    <string name="btn_edit">Edit Data</string>
    <string name="btn_show">Show Data</string>
    <string name="btn_delete">Delete Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="show_data">Data from DataBase will be display here</string>
</resources>
